# shady-thinker

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SHADER_RESEARCH.md
examples/: chat.rs
src/: chat.rs  gpu.rs  inference.rs  lib.rs  lora.rs  main.rs  model.rs  train.rs  weights.rs
src/shaders/: adam_update.wgsl  add.wgsl  add_rmsnorm.wgsl  argmax.wgsl  bf16_matvec.wgsl  cross_entropy_grad.wgsl  embed_from_argmax.wgsl  embedding.wgsl  fused_conv_deltanet_norm.wgsl  fused_gate_up_silu.wgsl  fused_gate_up_silu_4t.wgsl  fused_silu_gptq.wgsl  fused_silu_gptq_4t.wgsl  fused_split_qknorm_kvstore.wgsl  gptq_matvec.wgsl  gptq_matvec_4t.wgsl  gqa_attention_head.wgsl  gqa_reduce.wgsl  grad_a.wgsl  grad_b.wgsl  grad_fma.wgsl  lora_down.wgsl  lora_down_silu.wgsl  lora_up_add.wgsl  rmsnorm.wgsl  sigmoid_mul.wgsl  silu_mul.wgsl  three_way_add_rmsnorm.wgsl
tests/integration/: jit_lora_test.rs
