[package]
name = "crayonz"
version = "0.1.0"
edition = "2021"

[lib]
name = "tensorbend_rs"

[features]
default = []
jit-lora = []

[[example]]
name = "chat"
required-features = ["jit-lora"]

[[test]]
name = "jit_lora_test"
path = "tests/integration/jit_lora_test.rs"
required-features = ["jit-lora"]

[dependencies]
wgpu = "24"
pollster = "0.4"
safetensors = "0.4"
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22.2"
libc = "0.2"
