[package]
name = "shady-thinker"
version = "0.1.0"
edition = "2021"

[lib]
name = "shady_thinker"

[features]
default = []
chat = ["dep:tokenizers"]
jit-lora = ["chat"]

[[example]]
name = "chat"
required-features = ["jit-lora"]

[[test]]
name = "jit_lora_test"
path = "tests/integration/jit_lora_test.rs"
required-features = ["jit-lora"]

[dependencies]
wgpu = "24"
pollster = "0.4"
safetensors = "0.4"
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
libc = "0.2"
